syntax = "proto3";

option java_multiple_files = true;
option java_package = "ee.aleksale.payment.proto.v1";

import "payment-common.proto";
import "response-common.proto";

service PaymentService {
  rpc processPayment(Payment) returns (CommerceResponse);
}